[package]
name = "instrumentation"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "instrumentation"
required-features = ["instrumentation"]
path = "src/bin/rusty.rs"

[[bin]]
name = "cargo-instrumentation"
required-features = ["instrumentation"]
path = "src/bin/cargo-rusty.rs"

[[bin]]
name = "analysis"
required-features = ["analysis", "instrumentation", "file_writer"]
path = "src/bin/rusty.rs"

[[bin]]
name = "cargo-rusty"
required-features = ["analysis", "instrumentation", "file_writer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
analysis = []
instrumentation = []
file_writer = ["analysis"]
redis_writer = ["analysis"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
petgraph = { version = "0.6.0", features = ["serde-1"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
env_logger = "0.9.0"
log = "0.4.14"
clap = { version = "3.1.0", features = ["derive", "clap_derive"] }
toml = "0.5.8"
which = "4.2.4"
dircpy-stable = "0.3.5"
derive_builder = "0.10.2"
cargo_metadata = "0.18"
time = "0.3.41"
simplelog = "0.12.2"

[dependencies.redis]
version = "0.11.0"
